--- a/wp-content/themes/chicdressing/style.css
+++ b/wp-content/themes/chicdressing/style.css
@@ -29,7 +29,7 @@ body {
 }
  
 body .page-content, .page-content select, .page-content input, .page-content textarea, .page-content .post-author a, .page-content .ashe-widget a, .page-content .comment-author {
-    color: #333333 !important;
+    color: #333333 ;
     font-size: 16px;
     line-height: 2;
 }
@@ -55,6 +55,10 @@ body .header-logo a{
     cursor: pointer;
     padding: 12px;
     font-size: 14px;
+}
+
+.chic-bouton:hover{
+    color:#d0527a !important;
 }
 
 #featured-slider{
@@ -100,6 +104,7 @@ h3 {
     color: #663045 !important;
 }
 
-.widget_wysija input[type="submit"] { 
+input[type="submit"] {
     background-color: #663045 !important;
 }
+
